errors

In file included from /usr/include/gstreamer-1.0/gst/gstelementfactory.h:38,
                 from /usr/include/gstreamer-1.0/gst/gstelement.h:226,
                 from /usr/include/gstreamer-1.0/gst/gstbin.h:27,
                 from /usr/include/gstreamer-1.0/gst/gst.h:35,
                 from videobalance.c:1:
/usr/include/gstreamer-1.0/gst/gstplugin.h:268:3: error: ‘PACKAGE’ undeclared here (not in a function)
  268 |   PACKAGE, \
      |   ^~~~~~~
videobalance.c:89:1: note: in expansion of macro ‘GST_PLUGIN_DEFINE’
   89 | GST_PLUGIN_DEFINE(GST_VERSION_MAJOR, GST_VERSION_MINOR, videobalance, "Video balance plugin", gst_video_balance_plugin_register, "1.0", "LGPL", "GStreamer", "http://gstreamer.net/")


---------

cp: cannot stat 'videobalance.so': No such file or directory


cp: cannot create regular file '/usr/lib/gstreamer-1.0/': Not a directory

(gst-inspect-1.0:792578): GStreamer-WARNING **: 12:29:25.309: Failed to load plugin 'adjustvideo.c': adjustvideo.c: cannot open shared object file: No such file or directory
Could not load plugin file: Opening module failed: adjustvideo.c: cannot open shared object file: No such file or directory

------------------->


Plugin Details:
  Name                     adjustvideo.so
  Description              Plugin for blacklisted file
  Filename                 /usr/lib/x86_64-linux-gnu/gstreamer-1.0/adjustvideo.so
  Version                  0.0.0
  License                  BLACKLIST
  Source module            BLACKLIST
  Binary package           BLACKLIST
  Origin URL               BLACKLIST


  0 features:


